# data-engineer-test

./: .gitignore  README.md  data_jobs.csv  docker-compose.yml  ingest_jobs.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
dbt_jobs_project/: dbt_project.yml
dbt_jobs_project/.dbt/: .user.yml  profiles.yml
dbt_jobs_project/models/marts/: dim_companies.sql  dim_companies.yml  dim_countries.sql  dim_countries.yml  dim_fact_jobs.sql  dim_fact_jobs.yml  dim_job_categories.sql  dim_job_categories.yml  dim_job_schedule_types.sql  dim_job_schedule_types.yml  dim_job_skills.sql  dim_job_skills.yml  dim_job_sources.sql  dim_job_sources.yml  dim_locations.sql  dim_locations.yml  dim_salary_rate_types.sql  dim_salary_rate_types.yml  dim_schedule_types.sql  dim_schedule_types.yml  dim_skill_categories.sql  dim_skill_categories.yml  dim_skill_category_assignments.sql  dim_skill_category_assignments.yml  dim_skills.sql  dim_skills.yml
dbt_jobs_project/models/staging/: src_jobs.yml  stg_jobs.sql  stg_jobs.yml
dbt_jobs_project/seeds/: job_schedule_type_normalized.csv  job_skills_normalized.csv  job_via_normalized.csv
logs/: __init__.py
